# cosmo

./: README.md  _CoqProject  coq-cosmo.opam
theories/common/: gmap.v  lattice.v  list.v
theories/examples/: bounded_queue.v  dekker.v  escrow.v  peterson.v  pipeline.v  spinlock.v  ticketlock.v
theories/iris/: proofmode.v
theories/iris/base_logic/lib/: lattice.v
theories/language/: adequacy.v  atomic.v  lang.v  lifting.v  memory.v  notations.v  proofmode.v  store.v  tactics.v  vprop.v  weakestpre.v
theories/prelude/: base.v  prelude.v  tactics.v
