name:
  "coq-cosmo"
synopsis:
  "Cosmo"
opam-version:
  "2.0"
maintainer:
  "clement.allain@inria.fr"
authors: [
  "Clément Allain"
  "Glen Mével"
  "Jacques-Henri Jourdan"
  "François Pottier"
]
homepage:
  "https://github.com/clef-men/cosmo"
bug-reports:
  "https://github.com/clef-men/cosmo/issues"
depends: [
  "coq" {= "8.17.1"}
  "coq-stdpp" {= "dev.2023-06-01.0.d1254759"}
  "coq-iris" {= "dev.2023-06-14.0.f0e415b6"}
  "coq-iris-unstable" {= "dev.2023-06-14.0.f0e415b6"}
  "coq-diaframe" {= "dev.2023-06-15.0.1c3b5549"}
]
build: [
  make "-j%{jobs}%"
]
